# Notepad

./: .gitignore  CLAUDE.md  CMakeLists.txt  Notepad.sln  README.md
.github/workflows/: ci.yml  release.yml
src/: App.xaml  App.xaml.cpp  App.xaml.h  Directory.Build.props  HybridCRT.props  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Notepad.vcxproj  Project.idl  main.cpp  pch.h
